# pali-learn

./: .coveragerc  .gitmodules  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
palipedia/: clean.py  dirtools.py
palipedia/data/: cleanup.xsl
palipedia/transform/: sutta.py  xml.py
src/palipedia/: clean.py  dirtools.py
src/palipedia/transform/: sutta.py  xml.py
tests/: conftest.py  test_skeleton.py
tipitika/: root.toc.xml
tipitika/root/: Anya.toc.xml  Atthakatha.toc.xml  Tika.toc.xml  Tipitaka (Mula).toc.xml
tipitika/root/Anya/: Buddha-vandana gantha-sangaho.toc.xml  Byakarana gantha-sangaho.toc.xml  Ledi sayado gantha-sangaho.toc.xml  Niti-gantha-sangaho.toc.xml  Pakinnaka-gantha-sangaho.toc.xml  Sangayana-puccha vissajjana.toc.xml  Sihala-gantha-sangaho.toc.xml  Vamsa-gantha-sangaho.toc.xml  Visuddhimagga.toc.xml
tipitika/root/Anya/Buddha-vandana gantha-sangaho/: Buddhagunagathavali.toc.xml  Jinalankara.toc.xml  Kamalanjali.toc.xml  Lakkhanato buddhathomanagatha.toc.xml  Mahapanamapatha.toc.xml  Namakkaratika.toc.xml  Pajjamadhu.toc.xml  Sutavandana.toc.xml
tipitika/root/Anya/Byakarana gantha-sangaho/: Abhidhanappadipikapatha.toc.xml  Abhidhanappadipikatika.toc.xml  Balavatara ganthipadatthavinicchayasara.toc.xml  Kaccayanabyakaranam.toc.xml  Mogallanapancika.toc.xml  Moggallanabyakaranam.toc.xml  Padarupasiddhi.toc.xml  Payogasiddhipatha.toc.xml  Saddanitippakaranam (dhatumala).toc.xml  Saddanitippakaranam (padamala).toc.xml  Subodhalankarapatha.toc.xml  Subodhalankaratika.toc.xml  Vuttodayapatha.toc.xml
tipitika/root/Anya/Ledi sayado gantha-sangaho/: Anudipanipatha.toc.xml  Niruttidipani.toc.xml  Paramatthadipani Sangahamahatikapatha.toc.xml  Patthanuddesa dipanipatha.toc.xml
tipitika/root/Anya/Niti-gantha-sangaho/: Canakyaniti.toc.xml  Caturarakkhadipani.toc.xml  Dhammaniti.toc.xml  Kavidappananiti.toc.xml  Lokaniti.toc.xml  Maharahaniti.toc.xml  Naradakkhadipani.toc.xml  Nitimanjari.toc.xml  Surassatiniti.toc.xml  Suttantaniti.toc.xml
tipitika/root/Anya/Pakinnaka-gantha-sangaho/: Rasavahini.toc.xml  Simavisodhanipatha.toc.xml  Vessantaragiti.toc.xml
tipitika/root/Anya/Sangayana-puccha vissajjana/: Abhidhammapitaka (pu-vi).toc.xml  Anguttaranikaya (pu-vi).toc.xml  Atthakatha (pu-vi).toc.xml  Dighanikaya (pu-vi).toc.xml  Majjhimanikaya (pu-vi).toc.xml  Samyuttanikaya (pu-vi).toc.xml  Vinayapitaka (pu-vi).toc.xml
tipitika/root/Anya/Sihala-gantha-sangaho/: Dathavamsa.toc.xml  Dhatupathavilasiniya.toc.xml  Dhatuvamsa.toc.xml  Hatthavanagallaviharavamsa.toc.xml  Jinacaritaya.toc.xml  Jinavamsadipam.toc.xml  (+9 more)
tipitika/root/Atthakatha/: Abhidhammapitaka (atthakatha).toc.xml  Suttapitaka (atthakatha).toc.xml  Vinayapitaka (atthakatha).toc.xml
tipitika/root/Tika/: Abhidhammapitaka (tika).toc.xml  Suttapitaka (tika).toc.xml  Vinayapitaka (tika).toc.xml
tipitika/root/Tipitaka (Mula)/: Abhidhammapitaka.toc.xml  Suttapitaka.toc.xml  Vinayapitaka.toc.xml
(+2765 files in other folders)
